
<!--
Created by Kim Borja.
This is a course requirement for CS 192 Software Engineering II under the supervision of
Asst. Prof. Ma. Rowena C. Solamo of the Department of Computer Science, College of Engineering,
University of the Philippines, Diliman for the AY 2017-2018”.

This program is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->


<!--
Code History

Name of Programmer            Date changed                Description

Borja, Kim                    01/31/18                    File creation
-->


<!--
File creation date: 01/31/18
Development group: Group 4
Client Group: Students
Purpose: Strings used in all UIs
-->

<resources>
    <string name="app_name">DCS Codex</string>
    <string name="loginButton">Log in</string>
    <string name="studNum">Student Number</string>
    <string name="password">Password</string>
    <string name="reminder">Not a member yet?</string>
    <string name="signup">Sign up!</string>
    <string name="surname">Surname</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="register">Register</string>
</resources>
