<?xml version="1.0" encoding="utf-8"?>


<!--
Created by Kim Borja.
This is a course requirement for CS 192 Software Engineering II under the supervision of
Asst. Prof. Ma. Rowena C. Solamo of the Department of Computer Science, College of Engineering,
University of the Philippines, Diliman for the AY 2017-2018”.

This program is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->


<!--
Code History

Name of Programmer            Date changed                Description

Borja, Kim                    01/31/18                    Created UI for registration page
                                                          through xml
-->


<!--
File creation date: 01/31/18
Development group: Group 4
Client Group: Students
Purpose: For UI design of registration page
-->



<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
     tools:context="com.example.dcscodex.RegisterActivity">

     <Button
          android:id="@+id/registerButton"
          android:layout_width="215dp"
          android:layout_height="46dp"
          android:layout_marginEnd="98dp"
          android:layout_marginStart="98dp"
          android:layout_marginTop="47dp"
          android:background="@drawable/shape_button"
          android:fontFamily="sans-serif-condensed"
          android:onClick="OnRegister"
          android:text="@string/register"
          android:textColor="#ffffff"
          android:textSize="15sp"
          android:textStyle="bold"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/confirmPasswordEditText" />

     <EditText
          android:id="@+id/confirmPasswordEditText"
          android:layout_width="217dp"
          android:layout_height="38dp"
          android:layout_marginEnd="97dp"
          android:layout_marginStart="97dp"
          android:layout_marginTop="8dp"
          android:background="@drawable/shape_edittext"
          android:ems="10"
          android:fontFamily="@font/simplifica"
          android:hint="@string/confirmPassword"
          android:inputType="textPassword"
          android:textAlignment="center"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

     <EditText
          android:id="@+id/passwordEditText"
          android:layout_width="217dp"
          android:layout_height="38dp"
          android:layout_marginEnd="97dp"
          android:layout_marginStart="97dp"
          android:layout_marginTop="10dp"
          android:background="@drawable/shape_edittext"
          android:ems="10"
          android:fontFamily="@font/simplifica"
          android:hint="@string/password"
          android:inputType="textPassword"
          android:textAlignment="center"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/surnameEditText" />

     <EditText
          android:id="@+id/surnameEditText"
          android:layout_width="217dp"
          android:layout_height="38dp"
          android:layout_marginEnd="97dp"
          android:layout_marginStart="97dp"
          android:layout_marginTop="10dp"
          android:background="@drawable/shape_edittext"
          android:ems="10"
          android:fontFamily="@font/simplifica"
          android:hint="@string/surname"
          android:inputType="textPhonetic"
          android:textAlignment="center"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/studNumEditText" />

     <EditText
          android:id="@+id/studNumEditText"
          android:layout_width="217dp"
          android:layout_height="38dp"
          android:layout_marginEnd="97dp"
          android:layout_marginStart="97dp"
          android:layout_marginTop="108dp"
          android:background="@drawable/shape_edittext"
          android:ems="10"
          android:fontFamily="@font/simplifica"
          android:hint="@string/studNum"
          android:inputType="number"
          android:textAlignment="center"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>
